@@ -18,6 +18,8 @@ PP/04 New "dns_use_edns0" global option.
 PP/05 Don't segfault on misconfiguration of ref:name exim-user as uid.
       Bugzilla 1098.
 
+PP/06 Extra paranoia around STARTTLS-with-data-in-buffer.
+
 
 Exim version 4.75
 -----------------
